left a debug msg on

--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -474,6 +474,10 @@ h1 {
 }
 #intro .eco {
 	background: url(../img/ic-intro-bg.png) no-repeat 0 0;
+	
+	-webkit-animation-duration: 2s;
+	-moz-animation-duration: 2s;
+	animation-duration: 2s;
 }
 #intro .eco .spinner {
 	background: url(../img/ic-intro-in.png) no-repeat 0 0;
@@ -484,9 +488,9 @@ h1 {
 	top: 104px;
 	left: 16px;
 	
-	-webkit-animation:spinreverse 15s linear infinite, fadein 1s ease-in 0.6s backwards;
-	-moz-animation:spinreverse 15s linear infinite, fadein 1s ease-in 0.6s backwards;
-	animation:spinreverse 15s linear infinite, fadein 1s ease-in 0.6s backwards;
+	-webkit-animation:spinreverse 15s linear infinite, fadein 1s ease-in 1.5s backwards;
+	-moz-animation:spinreverse 15s linear infinite, fadein 1s ease-in 1.5s backwards;
+	animation:spinreverse 15s linear infinite, fadein 1s ease-in 1.5s backwards;
 }
 #intro .eco .spinner.s2 {
 	width: 70px;
@@ -494,9 +498,27 @@ h1 {
 	top: 42px;
 	left: 98px;
 	
-	-webkit-animation:spin 15s linear infinite, fadein 1s ease-in 0.3s backwards;
-	-moz-animation:spin 15s linear infinite, fadein 1s ease-in 0.3s backwards;
-	animation:spin 15s linear infinite, fadein 1s ease-in 0.3s backwards;
+	-webkit-animation:spin 15s linear infinite, fadein 1s ease-in 1s backwards;
+	-moz-animation:spin 15s linear infinite, fadein 1s ease-in 1s backwards;
+	animation:spin 15s linear infinite, fadein 1s ease-in 1s backwards;
+}
+.js #intro.comeon.onn li.fadein {
+	display: list-item;
+	/*
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+	*/
+}
+.js #intro.comeon.onn li.fadein.l1 {
+	-webkit-animation-delay: 1s;
+	-moz-animation-delay: 1s;
+	animation-delay: 1s;
+}
+.js #intro.comeon.onn li.fadein.l2 {
+	-webkit-animation-delay: 2s;
+	-moz-animation-delay: 2s;
+	animation-delay: 2s;
 }
 @media only screen and (max-width: 599px) {
 	#intro .eco {
@@ -1550,6 +1572,12 @@ p.disc {
 #applying ul.circles .pl .i span {
 	width: 72px;
 	background-position: -314px 0;
+}
+.js #applying ul.circles {
+	display: none;
+}
+.js #applying.onn ul.circles {
+	display: block;
 }
 /* #15 connect */
 #connect .text-position.center,
