--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -371,6 +371,8 @@ sup {
 }
 .js .comeon.onn .eco {
 	display: block;
+	
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .eco .in {
 	position: relative;
