--- a/modules/who-is-qualcomm/css/main.css
+++ b/modules/who-is-qualcomm/css/main.css
@@ -655,12 +655,16 @@ h1 {
 .block#whatname .inner {
 	min-height: 0;
 }
+.block#whatname .text-position {
+	padding-bottom: 6%;
+}
 #whatname .text-position h2 {
 	font-size: 1.8em;
+	margin-bottom: 2.6em;
 }
 #whatname .videohere {
 	display: block;
-	margin: 2.6em auto;
+	margin: 0 auto;
 }
 #whatname .videohere,
 iframe#whatvid {
@@ -673,6 +677,11 @@ iframe#whatvid {
 	height: 100%;
 	display: none;
 }
+iframe#video {
+	width: 960px;
+	height: 540px;
+	margin: 0 auto;
+}
 /*
 .js #what-video {
 	display: none;
@@ -682,23 +691,33 @@ iframe#whatvid {
 	display: block;
 }
 */
-@media only screen and (max-width: 959px) {
+@media only screen and (min-width: 800px) and (max-width: 959px) {
 	/* 720 */
 	#whatname .videohere,
 	iframe#whatvid {
 		width: 720px;
 		height: 405px;
 	}
+	iframe#video {
+		width: 800px;
+		height: 450px;
+		margin: 0 -40px;
+	}
 }
-@media only screen and (max-width: 799px) {
+@media only screen and (min-width: 600px) and (max-width: 799px) {
 	/* 540 */
 	#whatname .videohere,
 	iframe#whatvid {
 		width: 540px;
 		height: 304px;
 	}
+	iframe#video {
+		width: 560px;
+		height: 315px;
+		margin: 0 -10px;
+	}
 }
-@media only screen and (max-width: 599px) {
+@media only screen and (min-width: 480px) and (max-width: 599px) {
 	/* 440 */
 	#whatname .videohere,
 	iframe#whatvid {
@@ -707,6 +726,11 @@ iframe#whatvid {
 	}
 	#whatname .text-position h2 {
 		font-size: 1.7em;
+	}
+	iframe#video {
+		width: 480px;
+		height: 270px;
+		margin: 0 -20px;
 	}
 }
 @media only screen and (max-width: 479px) {
@@ -718,6 +742,11 @@ iframe#whatvid {
 	}
 	#whatname .text-position h2 {
 		font-size: 1.5em;
+	}
+	iframe#video {
+		width: 320px;
+		height: 180px;
+		margin: 0 -10px;
 	}
 }
 /* #4 global */
